# Distributed-Chat-Server

./: CMakeLists.txt  README.md  compile_commands.json  init  main.cpp  run.ps1
build-clean/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  log_message_test-b12d07c_include.cmake  log_message_test-b12d07c_tests.cmake  logger_test-b12d07c_include.cmake  logger_test-b12d07c_tests.cmake  message_test-b12d07c_include.cmake  message_test-b12d07c_tests.cmake  user_test-b12d07c_include.cmake  user_test-b12d07c_tests.cmake
build-clean/Testing/Temporary/: CTestCostData.txt
include/utils/: logger.h  message.h
include/utils/models/: log_message.h  logger.h  message.h  room.h  user.h
scripts/: build.ps1
src/utils/: logger.cpp  message.cpp
src/utils/models/: log_message.cpp  logger.cpp  message.cpp  room.cpp  user.cpp
tests/: run.ps1
tests/class/: log_message_test.cpp  logger_test.cpp  message_test.cpp  room_test.cpp  user_test.cpp
